--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
  
 <body>
 文档内容......
-我的名字叫  ：                    
-来自 ；
-喜欢 ；
-擅长 ；
-性格 ；
+我的名字叫  ：    宋楷润                
+来自 ；电机系
+喜欢 ；科幻
+擅长 ；无
+性格 ；沙雕
 
  
 </body>
