--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta charset="utf-8">
-<title>XXXX的主页</title>
+<title> zhenchen3419的主页</title>
 </head>
  
 <body>
 文档内容......
-我的名字叫  ：    宋楷润                
-来自 ；电机系
-喜欢 ；科幻
-擅长 ；无
-性格 ；沙雕
-
+我的名字叫 ： zhenchen3419                
+来自 信息学院 ；
+喜欢 学习 ；
+擅长 研究 ；
+性格 开朗 ；
  
 </body>
  
